# Robot-Dog

./: README.md
bostondynamics_spot_ws/my_package/: package.xml  setup.py
bostondynamics_spot_ws/my_package/my_package/: my_node.py
bostondynamics_spot_ws/spot_description/: CMakeLists.txt  package.xml
bostondynamics_spot_ws/spot_description/config/: spot_control.yaml
bostondynamics_spot_ws/spot_description/launch/: spot_effort.launch.py  spot_position.launch.py  spot_velocity.launch.py
bostondynamics_spot_ws/spot_description/model/: spot_control.xml
bostondynamics_spot_ws/spot_description/urdf/: spot_effort.xacro.urdf  spot_position.xacro.urdf  spot_velocity.xacro.urdf
