<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>spot_description</name>
 <version>0.1.0</version>
 <description>spot_description</description>

 <maintainer email="m23irm006@iitj.ac.in">Kranti Prakash</maintainer>

 <license>MIT</license>

 <author>Kranti Prakash</author>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <depend>joint_trajectory_controller</depend>
 <depend>velocity_controllers</depend>
 <depend>force_torque_sensor_broadcaster</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_cmake_clang_format</test_depend>
 <test_depend>ament_cmake_cppcheck</test_depend>
 <test_depend>ament_cmake_cpplint</test_depend>
 <test_depend>ament_cmake_lint_cmake</test_depend>
 <test_depend>ament_cmake_copyright</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>